--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@react-native/gradle-plugin": "^0.76.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.8.0",
