--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
